# python-semantic-versioning

./: CHANGELOG.md  Dockerfile  Dockerfile.gitlab  LICENSE  README.md  action.yml  custom_commit_parser.py  pyproject.toml
.github/workflows/: build.yml  prerelease.yml  release.yml
src/python-semantic-versioning/: Dockerfile  entrypoint.sh  python-semantic-release-config.toml
