[project]
name = "python-semantic-versioning"
version = "v2.6.0"
authors = [
  {name = "Mostafa Ghadimi", email = "mostafa.ghadimi@yahoo.com"},
]
description = "An open-source tool developed by DataBurst team to manage the versioning and generating changelog for projects."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "python-semantic-release>=10.2.0",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
]
